<resources>
    <string name="app_name">Messenger</string>

    <string name="new_user_signup">New User? Sign Up!</string>
    <string name="old_user_login">Registered? Login!</string>

    <string name="phonenumber">PhoneNumber</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="otp">OTP</string>

    <string name="login">Login !</string>
    <string name="signup">Sign Up !</string>
    <string name="send_otp">Verify Number</string>
    <string name="verify_otp">Verify OTP</string>

    <string name="error_input_empty">This field cannot be empty</string>
    <string name="already_registered">User is already registered</string>
    <string name="number_verification_fail">Phone Number could not be verified. Try Again.</string>

</resources>
